# camt053-writer-xlsx

./: CHANGELOG.md  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
camt053_writer_xlsx/: __init__.py  writer.py
examples/: 01_minimal_write.py  02_filter_reversals.py
releases/: v0.0.1.md  v0.0.13.md  v0.0.14.md  v0.0.7.md  v0.0.8.md  v0.0.9.md
tests/: test_stress.py  test_writer.py
