[project]
name = "camt053-writer-xlsx"
version = "0.0.1"
description = "Excel (.xlsx) writer for camt053-parsed ISO 20022 bank statements."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com" }]
keywords = [
    "iso20022",
    "camt053",
    "bank-statements",
    "xlsx",
    "excel",
    "accounting",
    "reconciliation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "camt053 >= 0.0.5, < 1",
    "openpyxl >= 3.1, < 4",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8",
    "pytest-cov >= 5",
    "ruff >= 0.6",
    "mypy >= 1.11",
    "interrogate >= 1.7",
]

[project.urls]
Homepage = "https://github.com/sebastienrousseau/camt053-writer-xlsx"
Documentation = "https://github.com/sebastienrousseau/camt053-writer-xlsx#readme"
Repository = "https://github.com/sebastienrousseau/camt053-writer-xlsx"
Issues = "https://github.com/sebastienrousseau/camt053-writer-xlsx/issues"
"Parent project" = "https://github.com/sebastienrousseau/camt053"

[build-system]
requires = ["hatchling >= 1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camt053_writer_xlsx"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N", "SIM"]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-q",
    "--cov=camt053_writer_xlsx",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["camt053_writer_xlsx"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
show_missing = true

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-magic = true
verbose = 1

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "camt053.*"
ignore_missing_imports = true
